wal-macros/tests/html_macro_tests/expressions/single_expression_fail.rs
use wal_macros::html;

struct TestNonDisplayStruct {
    field: i32,
}

fn main() {
    html! { () };
    html! { invalid_reference };
    html! { TestNonDisplayStruct { field: 15 } };
}
